# advent_of_code

./: pyproject.toml  reference.py
.devcontainer/: devcontainer.json
2023/1_calibration_values/: Trie.py  calibration_values.py  out.txt  test3.txt
2023/2_cube_conundrum/: cube_conundrum.py
2023/3_gear_ratios/: gear_ratios.py
2023/4_scratch_cards/: scratchcards.py
2023/5_almanac/: almanac.py  multi.py
2023/6_wait_for_it/: race.py  race_example.txt
