[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Matt Finnell <mattfinnell104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
